--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+v0.1.0 (18 Jan 2013)
+	Changed the way a grab bag is created. Now an instance has to be instantiated,
+		that is, multiple boxes or categories can be created.
+	Added "type" parameter to "load()".
+	Added "remove()".
+	Added "name()".
+	Added "set()".
+	Added "ignore()".
+
 v0.0.3 (07 Jan 2013)
 	Added INI parser/stringifier.
 	Removed FILE_TYPE_NOT_SUPPORTED error.
