--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v0.1.1 (02 Feb 2013)
+	Removed JS type.
+	Files can be batch loaded with "load()".
+	Changed the order of the parameters in "set()".
+
 v0.1.0 (20 Jan 2013)
 	Changed the way a grab bag is created. Now an instance has to be instantiated,
 		that is, multiple boxes or categories can be created.
